updated to fix panoramas loading on iPad and adjust the tab bar (so it no longer hangs off screen on iPad).

--- a/app/assets/stylesheets/classrooms.css.sass
+++ b/app/assets/stylesheets/classrooms.css.sass
@@ -216,8 +216,9 @@ select
   /*@include rounded-corners(15px)
   position: absolute
   top: 335px
-  left: 60%
-  width: 305px
+  left: 57%
+
+ 
   z-index: 20000
 
 
